# masterThesis

./: Dockerfile.bt-implementation  README.md  docker-compose.yml  trace_generator.py
conf/: Fetch.ini  GoToUser.ini  IsAtUser.ini  IsFetched.ini
maps/: locations.ini
reading_codes/: provaLettura.py  provaLettura_batt_atLocation.py
src/: CMakeLists.txt
src/Arm_component/: ArmComponent.cpp  CMakeLists.txt
src/Arm_protocol/: ArmService.cpp  ArmService.h  ArmServiceMonitorObject.cpp  ArmServiceMonitorObject.h  CMakeLists.txt  arm_commands.thrift
src/BT/: CMakeLists.txt  main.cpp  release3_BT (copy).xml  release3_BT.xml
src/BT_protocol/: Skill_requestMonitorObject.cpp
src/BatteryLevel_skill/: BatteryLevelSkillStateMachine.scxml  CMakeLists.txt
src/BatteryNotCharging_skill/: BatteryNotChargingSkillStateMachine.scxml
src/Battery_protocol/: BatteryReader.cpp  BatteryReaderMonitorObject.cpp
src/Blackboard_component/: BlackboardComponent.cpp
src/Fetch_skill/: CMakeLists.txt  FetchSkillStateMachine.scxml
src/GoTo_component/: GoToComponent.cpp
src/GoTo_protocol/: GoToMonitorObject.cpp
src/IsAt_skill/: IsAtSkillStateMachine.scxml
src/IsFetched_skill/: CMakeLists.txt  IsFetchedSkillStateMachine.scxml
src/Monitor/: BatteryLevelMonitor.scxml  DestinationMonitor.scxml  GraspMonitor.scxml  MonitorDelegate.qml  TargetMonitor.scxml  main.cpp  monitor.qml  res.qrc
src/fakeBatteryChargingStation/: fakeBatteryChargingStation.cpp
src/skill-code-gen/: SkillGenerator.cpp  ports-connect-description.txt
